# VulkanRenderer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  TODO.md
.github/workflows/: cmake.yml  codeql.yml
Assets/: CMakeLists.txt  Config.json
Assets/GFX/: Albedo.ktx2  Emmisive.ktx2  Metal-Roughness.ktx2  Normal.ktx2
Assets/Scenes/: Bistro.json  Default.json  IntelSponza.json
Assets/Shaders/: BRDF.frag  BasicShader.frag  BasicShader.vert  CMakeLists.txt  CompileShader.py  CompileShaders.py  Converter.frag  Converter.vert  Convolution.frag  Convolution.vert  Culling.comp  Depth.frag  Depth.vert  DownSample.frag  Forward.frag  Forward.vert  GBuffer.frag  GBuffer.vert  ImGui.frag  ImGui.vert  Lighting.frag  PointShadow.frag  PointShadow.vert  PostProcess.frag  PostProcess.vert  PreFilter.frag  PreFilter.vert  SSAO.frag  SSAOBlur.frag  Shadow.rchit  Shadow.rgen  Shadow.rmiss  Shadow.vert  Skybox.frag  Skybox.vert  SpotShadow.vert  Swapchain.frag  Swapchain.vert  TAA.frag  UpSample.frag  (+1 more)
Assets/Shaders/AO/: BlurHorizontal.frag  Denoise.comp  DepthPreFilter.comp  SSAO.frag  XeGTAO.comp
Assets/Shaders/AO/SSAO/: BlurHorizontal.frag  BlurVertical.frag  SSAO.frag
Assets/Shaders/AO/VBGTAO/: DepthPreFilter.comp  SpacialDenoise.comp  VBGTAO.comp
Assets/Shaders/AO/XeGTAO/: Denoise.comp  DepthPreFilter.comp  XeGTAO.comp
Assets/Shaders/Bloom/: DownSample.frag  UpSample.frag
Assets/Shaders/Bloom/DownSample/: FirstSample.frag  Regular.frag
Assets/Shaders/Culling/: Frustum.comp  Occlusion.comp  Visibility.comp
Assets/Shaders/Deferred/: Depth.vert  GBuffer.frag  GBuffer.vert  HiZ.comp  Lighting.frag
Assets/Shaders/Deferred/Depth/: AlphaMasked.frag  AlphaMasked.vert  Opaque.vert
Assets/Shaders/Deferred/GBuffer/: AlphaMasked.frag  DoubleSided.frag  GBuffer.vert  Opaque.frag  Opaque.vert  SingleSided.frag
Assets/Shaders/Deferred/GBuffer/DoubleSided/: AlphaMasked.frag  Opaque.frag
Assets/Shaders/Deferred/GBuffer/SingleSided/: AlphaMasked.frag  Opaque.frag
Assets/Shaders/IBL/: BRDF.frag  Converter.frag  Converter.vert  Convolution.frag  Convolution.vert  PreFilter.frag  PreFilter.vert
Assets/Shaders/ImGui/: ImGui.frag  ImGui.vert
Assets/Shaders/Include/: AABB.glsl  ACES.glsl  CSM.glsl  Cascade.glsl  Color.glsl  Constants.glsl  Converter.glsl  Culling.glsl  DepthConstants.glsl  DrawCall.glsl  ForwardConstants.glsl  ForwardPushConstant.glsl  Frustum.glsl  GammaCorrect.glsl  Instance.glsl  Lights.glsl  Material.glsl  Math.glsl  MegaSet.glsl  Mesh.glsl  PBR.glsl  Packing.glsl  PointShadowData.glsl  PointShadowMap.glsl  Samples.glsl  Sampling.glsl  Scene.glsl  SpotShadowMap.glsl  Texture.glsl  Tonemap.glsl  Vertex.glsl  XeGTAO.glsl
Assets/Shaders/Include/Constants/: Converter.glsl  Convolution.glsl  Culling.glsl  Denoise.glsl  Depth.glsl  DepthPreFilter.glsl  DownSample.glsl  Forward.glsl  GBuffer.glsl  Gaussian.glsl  ImGui.glsl  Lighting.glsl  PointShadow.glsl  PostProcess.glsl  PreFilter.glsl  SSAO.glsl  SSAOBlur.glsl  Shadow.glsl  ShadowRT.glsl  Skybox.glsl  SpotShadow.glsl  Swapchain.glsl  TAA.glsl  UpSample.glsl  XeGTAO.glsl  XeGTAODepthPreFilter.glsl
Assets/Shaders/Include/Constants/AO/VBGTAO/: DepthPreFilter.glsl  SpacialDenoise.glsl  VBGTAO.glsl
Assets/Shaders/Include/Constants/AO/XeGTAO/: Denoise.glsl  XeGTAO.glsl
Assets/Shaders/Include/Constants/Culling/: Frustum.glsl  Occlusion.glsl  Visibility.glsl
Assets/Shaders/Include/Constants/Deferred/: Depth.glsl  GBuffer.glsl  HiZ.glsl  Lighting.glsl
Assets/Shaders/Include/Constants/IBL/: Converter.glsl  Convolution.glsl  PreFilter.glsl  Shared.glsl
Assets/Shaders/Include/Constants/ImGui/: ImGui.glsl
Assets/Shaders/Include/Constants/Misc/: Culling.glsl  PostProcess.glsl
Assets/Shaders/Include/Constants/Shadows/: PointShadow.glsl  ShadowRT.glsl  SpotShadow.glsl
Assets/Shaders/Include/Constants/Skybox/: Skybox.glsl
Assets/Shaders/Include/Constants/Unused/: Forward.glsl  Shadow.glsl
Assets/Shaders/Misc/: Culling.comp  Empty.frag  PostProcess.frag  TAA.frag
Assets/Shaders/Shadows/: PointShadow.frag  PointShadow.vert  Shadow.rgen  SpotShadow.vert
Assets/Shaders/Shadows/PointShadow/: AlphaMasked.frag  AlphaMasked.vert  Opaque.frag  Opaque.vert
Assets/Shaders/Shadows/RT/: Shadow.rahit  Shadow.rgen  Shadow.rmiss
Assets/Shaders/Shadows/SpotShadow/: AlphaMasked.frag  AlphaMasked.vert  Opaque.vert
Assets/Shaders/Skybox/: Skybox.frag  Skybox.vert
Assets/Shaders/Unused/: Forward.frag  Forward.vert  Shadow.vert
Shared/: GLSL.h
Shared/Bloom/: DownSample.h  UpSample.h
Shared/Culling/: Frustum.h
Shared/Deferred/: Depth.h  GBuffer.h  Lighting.h
Shared/GPU/: AABB.h  Lights.h  Material.h  Mesh.h  Plane.h  Scene.h  Surface.h  Vertex.h
Shared/IBL/: Converter.h  Convolution.h  PreFilter.h
Shared/ImGui/: DearImGui.h
Shared/Misc/: PostProcess.h  TAA.h
Shared/Shadows/: PointShadow.h  ShadowRT.h  SpotShadow.h
Shared/Skybox/: Skybox.h
Source/: Main.cpp
Source/Engine/: AppInstance.cpp  AppInstance.h  Config.cpp  Config.h  Inputs.cpp  Inputs.h  Scene.cpp  Scene.h  Window.cpp  Window.h
Source/Models/: Info.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelManager.cpp  ModelManager.h  Vertex.cpp  Vertex.h  VertexInfo.h
Source/Renderer/: BasicShaderPushConstant.h  Camera.cpp  Camera.h  DirLight.h  FreeCamera.cpp  FreeCamera.h  IBLMaps.cpp  IBLMaps.h  IPipeline.cpp  IPipeline.h  IndirectBuffer.cpp  IndirectBuffer.h  Mesh.cpp  Mesh.h  MeshBuffer.cpp  MeshBuffer.h  PointLight.h  RenderConstants.h  RenderManager.cpp  RenderManager.h  RenderObject.cpp  RenderObject.h  RenderPipeline.cpp  RenderPipeline.h  Scene.h  SceneBuffer.cpp  SceneBuffer.h  SpotLight.h  SwapPipeline.cpp  SwapPipeline.h  Vertex.cpp  Vertex.h
Source/Util/: AABB.cpp  AABB.h  Align.h  Concept.h  DeletionQueue.cpp  DeletionQueue.h  Enum.h  Files.cpp  Files.h  FrameCounter.cpp  FrameCounter.h  Hash.h  Inputs.cpp  Inputs.h  JSON.cpp  JSON.h  Log.h  Maths.cpp  Maths.h  Optional.h  Plane.cpp  Plane.h  Random.h  Ranges.h  SIMD.cpp  SIMD.h  Scope.h  SourceLocation.h  Time.cpp  Time.h  Types.h  Util.h  (+2 more)
(+404 files in other folders)
